@@ -117,34 +117,6 @@ typedef enum {
 } pslr_exposure_mode_t;
 
 typedef enum {
-    PSLR_EXPOSURE_SUBMODE_NONE = 0,
-    PSLR_EXPOSURE_SUBMODE_HISPEED = 1,
-    PSLR_EXPOSURE_SUBMODE_DOF = 2,
-    PSLR_EXPOSURE_SUBMODE_MTF = 3,
-    PSLR_EXPOSURE_SUBMODE_STANDARD = 4,
-    PSLR_EXPOSURE_SUBMODE_PORTRAIT = 5,
-    PSLR_EXPOSURE_SUBMODE_LANDSCAPE = 6,
-    PSLR_EXPOSURE_SUBMODE_MACRO = 7,
-    PSLR_EXPOSURE_SUBMODE_SPORT = 8,
-    PSLR_EXPOSURE_SUBMODE_NIGHTSCENEPORTRAIT = 9,
-    PSLR_EXPOSURE_SUBMODE_NOFLASH = 10,
-    PSLR_EXPOSURE_SUBMODE_NIGHTSCENE = 11,
-    PSLR_EXPOSURE_SUBMODE_SURFANDSNOW = 12,
-    PSLR_EXPOSURE_SUBMODE_TEXT = 13,
-    PSLR_EXPOSURE_SUBMODE_SUNSET = 14,
-    PSLR_EXPOSURE_SUBMODE_KIDS = 15,
-    PSLR_EXPOSURE_SUBMODE_PET = 16,
-    PSLR_EXPOSURE_SUBMODE_CANDLELIGHT = 17,
-    PSLR_EXPOSURE_SUBMODE_MUSEUM = 18,
-    PSLR_EXPOSURE_SUBMODE_FOOD = 19,
-    PSLR_EXPOSURE_SUBMODE_STAGE = 20,
-    PSLR_EXPOSURE_SUBMODE_NIGHTSNAP = 21,
-    PSLR_EXPOSURE_SUBMODE_SWALLOWDOF = 22,
-    PSLR_EXPOSURE_SUBMODE_MAX
-} pslr_exposure_submode_t;
-
-
-typedef enum {
     PSLR_GUI_EXPOSURE_MODE_GREEN,
     PSLR_GUI_EXPOSURE_MODE_P,
     PSLR_GUI_EXPOSURE_MODE_SV,
